# Openlist-Ani

./: .gitignore  README.md  config.toml.example  pyproject.toml
.github/workflows/: publish.yaml
docker/: Dockerfile  entrypoint.sh
src/openlist_ani/: __init__.py  assistant_main.py  config.py  database.py  logger.py  worker.py
src/openlist_ani/assistant/: __init__.py  assistant.py  model.py  telegram_assistant.py
src/openlist_ani/assistant/tools/: __init__.py  base.py  db_tool.py  download_tool.py  parse_rss.py  search_anime.py
src/openlist_ani/core/: rss.py
src/openlist_ani/core/download/: __init__.py  manager.py
src/openlist_ani/core/download/downloader/: __init__.py  base.py  (+1 more)
src/openlist_ani/core/notification/: __init__.py  manager.py
src/openlist_ani/core/parser/: model.py  parser.py  utils.py
src/openlist_ani/core/website/: __init__.py  aniapi.py  base.py  common.py  factory.py  mikan.py  model.py
src/openlist_ani/scripts/: migrate_db.py
tests/: conftest.py  test_config.py  test_validate_openlist.py  test_worker.py
tests/core/: test_rss.py
tests/core/download/: test_manager.py
tests/core/download/downloader/: test_openlist_downloader.py
tests/core/download/model/: test_task.py
tests/core/notification/: test_manager.py
tests/core/notification/bot/: test_base.py  test_factory.py  test_pushplus.py  test_telegram.py
tests/core/parser/: test_model.py  test_parser.py  test_tmdb_tool.py  test_utils.py
tests/core/website/: test_aniapi.py  test_base.py  test_common.py  test_factory.py  test_mikan.py  test_model.py
(+15 files in other folders)
