[project]
name = "openlist-ani"
version = "1.0.0.dev260223"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "TwoSix", email = "nitiaob@qq.com" }]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "tomlkit>=0.13.3",
]

[project.scripts]
openlist-ani = "openlist_ani:main"
openlist-ani-assistant = "openlist_ani.assistant_main:main"
migrate-db = "openlist_ani.scripts.migrate_db:migrate"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
